@@ -2,6 +2,12 @@
 
 	* gst/base/gstbasesink.c: (gst_base_sink_commit_state),
 	(gst_base_sink_handle_object), (gst_base_sink_query), (do_playing):
+	Fix query handling again.
+
+2005-10-19  Wim Taymans  <wim@fluendo.com>
+
+	* gst/base/gstbasesink.c: (gst_base_sink_commit_state),
+	(gst_base_sink_handle_object), (gst_base_sink_query), (do_playing):
 	* gst/base/gstbasesrc.c: (gst_base_src_query):
 	* gst/elements/gstfilesink.c: (gst_file_sink_query):
 	* gst/elements/gsttypefindelement.c:
